--- a/app/views/streams/index.html.erb
+++ b/app/views/streams/index.html.erb
@@ -15,10 +15,21 @@
 <% end %>
 
 <div id="streams-streams">
+  <h2 class="streams-title">XWS consumers</h2>
   <% @streams.each do |stream| %>
     <div id="streams-stream">
-      <span class="streams-stream-title"><%= link_to(stream.title, stream_path(stream)) %></span>
-      <%= stream.message_count_since(5.minutes.ago) %>
+      <div class="streams-stream-middle">
+        <span class="streams-stream-title"><%= link_to(stream.title, stream_path(stream)) %></span>
+        <span class="streams-stream-count"><%= stream.message_count_since(5.minutes.ago) %> / 5 min</span>
+      </div>
+
+      <div class="streams-stream-right">
+        <span class="streams-stream-last">
+          <strong>Last message:</strong> <%= gl_date(Time.now) %>
+          (<%= time_ago_in_words(rand(5000).seconds.ago) %> ago)
+        </span>
+        <span class="streams-stream-description"><%= stream.description.blank? ? "No description" : stream.description %></span>
+      </div>
     </div>
   <% end %>
 </div>
