more speed improvements for streams

--- a/app/views/streams/_sidebar_show.html.erb
+++ b/app/views/streams/_sidebar_show.html.erb
@@ -30,7 +30,7 @@
     )
 %>
 
-<h3 id="streams-sidebar-totalcount">Total messages: <%= @stream.message_count %></h3>
+<h3 id="streams-sidebar-totalcount">Total messages: <%= @total_count %></h3>
 
 <h3>Favorited by:</h3>
 <ul id="streams-sidebar-favorites">
